#summary Changelog for all changes since the fork

= Changes =
== Version 0.8.8 ==
  * Fixed Issue #49: ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=49 ttrss-reader-fork closes on launch and with wrong password])
  * Fixed Issue #50: ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=50 New Article unread are shown])

== Version 0.8.7 ==
  * Performance improvements for ImageCache
  * Minor fixes for retrieving of articles
  * Fixed accidental jump to first feed while browsing
  
== Version 0.8.6 ==
  * ImageCache download now parallelized into 4 threads (ArticleCache: 8 threads)
  * Some performance tweaks
  * Fixed Issue #45: ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=45 SQL Error because of suhosin-blocked article_id])
  * Added preference to split long GET-Requests due to problems with server-side security scanners like Suhosin

== Version 0.8.5 ==
  * Synchronizing marked articles now also works for complete feeds and categories
  * When marking feeds/categories as read while beeing offline only local articles can be included, articles that are new on the server but not synchronized to the client cannot.
  * Fixed FC on mark article read while beeing offline

== Version 0.8.4 ==
  * Added options for Image- and ArticleCache: cache for unread articles only
  * Caching now works independent from online/offline state
  * Added Offline-Synchronisation (article-state, star, published is synchronized later when browsing offline)
  * Navigate by keyboard: n for next, b for previous article/feed
  
== Version 0.8.3 ==
  * Fixed Articles not getting purged according to "Store articles limit"
  * Probably fixed OutOfMemory problem while fetching articles
  
== Version 0.8.2 ==
  * Added ArticleCache (load all new articles at once) for Donators
  * Refresh unread-state while browsing unread articles