@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.ttrssreader"
     android:installLocation="auto"
-    android:versionName="0.8.7"
-    android:versionCode="872">
+    android:versionName="0.8.8"
+    android:versionCode="880">
 
     <application
         android:icon="@drawable/icon"
